# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Fixed a race condition in broadcast-dhcp-discover.nse that
  could cause responses to be missed on fast networks. It was noticed
  by Vasiliy Kulikov. [David]

o Added IPv6 support to firewalk.nse. [Henri]

o Fixed a bug in reverse name resolution: a name of "." would leave
  the hostname unintialized, which would manifest as
    Illegal character(s) in hostname -- replacing with '*'
  errors. [Gisle Vanem]

o Merged nsock-engines from nmap-exp. This rewrite of the nsock library adds
  support for system-specific scalable IO notification facilities without
  breaking portability. This initial version comes with an epoll(7)-based engine
  for Linux and a select(2)-based fallback engine for all other operating
  systems. [Henri] 

o Added probe and matchline for Couchbase Membase NoSQL database [Patrik]

o Added the new --script-args-file option which allows you to specify
  the name of a file containing all of your desired NSE script
  arguments.  The arguments may be separated with commas or newlines
  and may be overridden by arguments specified on the command-line
  with --script-args. [Daniel Miller]

o [NSE] Added the script http-vuln-cve2009-3960 that detects and exploits the
  CVE 2009-3960 XML injection vulnerability in Adobe products. [Hani
  Benhabiles]

o Added two new probes for the Basho Riak PBC and Tarantool protocols.
  [Patrik] 

o [NSE] Added a natpmp library and the script nat-pmp-mapport that allows
  NAT mapping of external TCP and UDP ports to internal addresses. [Patrik]

o [NSE] Added the script riak-http-info that lists version and statistics
  information from the Basho Riak distributed database. [Patrik]

o [NSE] Added the script memcached-info that lists version and statistics
  information from the distributed memory object caching service memcached
  [Patrik]

o [NSE] Added the script redis-info that lists version and statistic